[fix] (ABC-755): Fix calendar year combobox overflown (#426)

--- a/src/modules/base/calendar/calendar.css
+++ b/src/modules/base/calendar/calendar.css
@@ -69,7 +69,6 @@ div:focus {
 
 .avonni-calendar__container {
     width: fit-content;
-    opacity: 0.99;
 }
 
 lightning-combobox {
